# spkrd

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  README.md  TODO  configure  do_cleanup.sh  gspeakers.spec.in
gspeakers/: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in  gspeakers.desktop.in
gspeakers/doc/: crossover_history.html  index.html  lists.html
gspeakers/html/: index.html
gspeakers/po/: POTFILES  POTFILES.in  hu.po
gspeakers/src/: Makefile.am  Makefile.in  box.cc  box.h  boxhistory.cc  boxlist.cc  boxlist.h  boxtoolbar.cc  boxtoolbar.h  cconfig.cc  cconfig.h  common.cc  common.h  crossover.h  crossoverhistory.cc  crossovertreeview.h  gfilter.cc  gfilter.h  gnomespeakers.cc  gnomespeakers.h  gspeakersboxplot.cc  gspeakerscfg.cc  gspeakerscfg.h  gspeakerscfgbox.cc  gspeakerscfgbox.h  gspeakersmenu.cc  gspeakersmenu.h  gspeakersobject.h  gspeakersplot.cc  gspeakersplot.h  gspeakersplot2.cc  main.cc  net.cc  part.cc  plothistory.h  simtoolbar.cc  simtoolbar.h  speaker.cc  speaker.h  speakerlistselector.cc  (+2 more)
gspeakers/xml/: Makefile.in  crossover1.xml  crossover2.xml  enclosures1.xml  gspeakers.conf  speakers1.xml  speakers2.xml  speakers3.xml  vifa.xml
gspeakers/xpm/: browse.xpm  mspeakers_mboxes.xpm  multiple_boxes.xpm  multiple_speakers.xpm  new_box.xpm  new_speaker.xpm  new_template.xpm  new_xml.xpm  opt_box.xpm  plot_template.xpm  remove_all_plots.xpm  remove_plot.xpm
gspeakers2/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.macosx  README.win32  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  do_release.txt  gspeakers.desktop.in  gspeakers.spec.in
gspeakers2/doc/: index.html  speakereditor.html  win32_compile.README
gspeakers2/html/: README.win32  history.html  index.html  linuxinstall.html  needhelp.html  screenshots.html  support.html
gspeakers2/pixmaps/: Makefile.am  Makefile.in
gspeakers2/po/: ChangeLog  Makefile  Makefile.in  POTFILES  cat-id-tbl.c  gspeakers.pot  gtkmm_hello.pot  sv.po
gspeakers2/src/: Makefile.am  Makefile.in  box.cc  box.h  boxeditor.cc  boxeditor.h  boxhistory.cc  boxhistory.h  boxlist.cc  boxlist.h  cellitemcrossover.cc  cellitemcrossover.h  cellrendererpopup.cc  cellrendererpopup.h  common.cc  common.h  crossover.cc  crossoverhistory.cc  crossoverhistory.h  crossoverimageview.cc  crossoverimageview.h  crossoverlist.cc  crossoverpaned.cc  crossoverpaned.h  crossovertreeview.cc  crossovertreeview.h  crossoverwizard.cc  crossoverwizard.h  driverfreqrespplot.cc  driverfreqrespplot.h  enclosurepaned.cc  enclosurepaned.h  filterlinkframe.cc  filterlinkframe.h  freqrespeditor.cc  freqrespeditor.h  gspeakersboxplot.cc  gspeakersboxplot.h  gspeakerscolor.cc  gspeakerscolor.h  (+39 more)
gspeakers2/xml/: Makefile.am  Makefile.in  box1.xml  crossover1.xml  default.xml  morelmdt32s.frf  seasl14rcyp.frf  test.xml  vifa.xml
pixmaps/: CMakeLists.txt  Makefile.am  Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  box.cc  box.h  boxeditor.cc  boxeditor.h  boxhistory.cc  boxhistory.h  boxlist.cc  boxlist.h  cell_renderer_popup.cpp  cell_renderer_popup.hpp  cellitemcrossover.cc  cellitemcrossover.h  cellrendererpopup.cc  cellrendererpopup.cpp  cellrendererpopup.h  common.cc  common.cpp  common.h  crossover.cc  crossover.h  crossoverhistory.cc  crossoverhistory.h  crossoverimageview.cc  crossoverimageview.h  crossoverlist.cc  crossoverlist.h  crossoverpaned.cc  crossoverpaned.h  crossovertreeview.cc  crossovertreeview.h  crossoverwizard.cc  crossoverwizard.h  driverfreqrespplot.cc  driverfreqrespplot.h  enclosurepaned.cc  enclosurepaned.h  file_chooser.cpp  (+70 more)
src/crossover/: attenuation_circuit.hpp  cellitemcrossover.cc  cellitemcrossover.cpp  cellitemcrossover.h  crossover.cc  crossover.cpp  crossover.h  crossover.hpp  crossover_cell_item.cpp  crossover_cell_item.hpp  crossover_history.cpp  crossover_history.hpp  crossover_image_view.cpp  crossover_image_view.hpp  crossover_list.cpp  crossover_list.hpp  crossover_pane.cpp  crossover_pane.hpp  crossover_tree_view.cpp  crossover_tree_view.hpp  crossover_wizard.cpp  crossover_wizard.hpp  crossoverhistory.cc  crossoverhistory.cpp  crossoverhistory.h  crossoverimageview.cc  crossoverimageview.cpp  crossoverimageview.h  crossoverlist.cc  crossoverlist.cpp  crossoverlist.h  crossoverpaned.cc  crossoverpaned.h  crossovertreeview.cc  crossovertreeview.cpp  crossovertreeview.h  crossoverwizard.cc  crossoverwizard.h  filter_link_frame.cpp  filter_link_frame.hpp  (+26 more)
src/driver/: driver.cpp  driver.hpp  driver_editor.cpp  driver_editor.hpp  driver_frequency_response_plot.cpp  driver_frequency_response_plot.hpp  driver_list.cpp  driver_list.hpp  driverfreqrespplot.cc  driverfreqrespplot.h  freqrespeditor.cc  freqrespeditor.h  frequency_response_editor.cpp  frequency_response_editor.hpp  speaker.cc  speaker.h  speaker_editor.cpp  speaker_editor.hpp  speaker_list.cpp  speaker_list.hpp  speakereditor.cc  speakereditor.h  speakerlist.cc  speakerlist.h
src/enclosure/: box.cc  box.h  boxeditor.cc  boxeditor.h  boxhistory.cc  boxhistory.h  boxlist.cc  boxlist.h  enclosure.cpp  enclosure.hpp  enclosure_editor.cpp  enclosure_editor.hpp  enclosure_history.cpp  enclosure_history.hpp  enclosure_list.cpp  enclosure_list.hpp  enclosure_model.cpp  enclosure_model.hpp  enclosure_pane.cpp  enclosure_pane.hpp  enclosurepaned.cc  enclosurepaned.h
src/libegg/: eggsidebar.c  eggsidebar.h  eggsidebarbutton.c  eggsidebarbutton.h
src/plot/: box_plot.cpp  box_plot.hpp  color_palette.cpp  color_palette.h  color_palette.hpp  colours.cpp  colours.hpp  filter_plot.cpp  filter_plot.hpp  frequency_response_plot.cpp  frequency_response_plot.hpp  gspeakersboxplot.cpp  (+22 more)
test/: CMakeLists.txt  crossover.cpp  crossover1.xml  crossover_input.cpp  driver.cpp  enclosure.cpp  vifa.xml
xml/: CMakeLists.txt  Makefile.in  box1.xml  crossover1.json  crossover1.xml  crossover2.xml  default.xml  peerles115dt-26-72sf.frf  seasl21rn4xp.frf  seast14rcyph.frf  test.xml  vifa.json  vifa.xml  vifad27tg-05-06.frf  vifap21wo-20-08.frf
(+43 files in other folders)
