AC_INIT(configure.in)
#AM_PROG_XML_I18N_TOOLS
#AM_PROG_PONG
AM_INIT_AUTOMAKE(gspeakers, 0.1)
#AM_MAINTAINER_MODE

AC_PROG_INSTALL 
AC_PROG_CC 
AC_PROG_CPP 
AC_PROG_CXX

#AC_DEFINE_UNQUOTED(bla, "${prefix}/share")
AM_CONFIG_HEADER(config.h)

myapp_save_prefix="${prefix}"
test "x${prefix}" = "xNONE" && prefix="${ac_default_prefix}"
AC_DEFINE_UNQUOTED([MYAPP_PREFIX],["${prefix}"],[package prefix])
prefix="${myapp_save_prefix}"

#AC_DEFINE_UNQUOTED(bla, "${prefix}")
# find the actual value for $prefix that we'll end up with
#if test "x$prefix" = "xNONE"; then
#  REAL_PREFIX=$ac_default_prefix
#else
#  REAL_PREFIX=$prefix
#fi

dnl gnome_cv_use_gnome=yes
GNOME_INIT
GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS

AM_PATH_GTKMM(1.2.5,,AC_MSG_ERROR([Cannot find Gtk-- > 1.2.5...http://gtkmm.sourceforge.net]))

AM_PATH_GNOMEMM(1.2.0,,AC_MSG_ERROR([Cannot find Gnome-- > 1.2.0...http://gtkmm.sourceforge.net]))

G_CFLAGS="`$GNOME_CONFIG --cflags gnomemm xml`"
G_LIBS="`$GNOME_CONFIG --libs gnomemm xml`"
AC_SUBST(G_CFLAGS)
AC_SUBST(G_LIBS)

#AM_PATH_GTK_EXTRA(0.99.16,,AC_MSG_ERROR([Cannot find GtkExtra > 0.99.16]))
#GTK_EXTRA_LIBS="`gtkextra-config --libs`"
#AC_SUBST(GTK_EXTRA_LIBS)

# check for gconf library
#AM_PATH_GCONF(1.0.0,,AC_MSG_ERROR([Cannot find correct GConf version]), gconf gconf-gtk)
#AC_SUBST(GCONF_LIBS)
#AC_SUBST(GCONF_CFLAGS)

#dnl
#dnl Bonobo
#dnl 
#AC_MSG_CHECKING(for Bonobo >= 1.0.3)
#if gnome-config --libs bonobox > /dev/null 2>&1; then
#	vers=`gnome-config --modversion bonobo | sed -e "s/bonobo-//" | \
#		awk 'BEGIN { FS = "."; } { printf "%d", \
#		$1 * 1000000 + $2 * 1000 + $3;}'`
#	if test "$vers" -ge 1000003; then
#		bonobo_ok=true
#	else
#		bonobo_ok=false
#	fi
#else
#	bonobo_ok=false
#fi
#
#if $bonobo_ok; then
#	AC_MSG_RESULT(yes)
#else
#	AC_MSG_ERROR(Bonobo >= 1.0.3 required)
#fi

#BONOBO_CFLAGS=`gnome-config --cflags bonobox`
#BONOBO_LIBS=`gnome-config --libs bonobox`
#AC_SUBST(BONOBO_CFLAGS)
#AC_SUBST(BONOBO_LIBS)


AC_OUTPUT(Makefile src/Makefile)
#AC_OUTPUT(config.h)