CFLAGS = 
CXXFLAGS = -Wall -g
INCLUDES = $(G_CFLAGS)
bin_PROGRAMS = gnomespeakers
gnomespeakers_SOURCES = \
main.cc\
gnomespeakers.h\
gnomespeakers.cc\
speakertoolbar.h\
speakertoolbar.cc\
boxtoolbar.h\
boxtoolbar.cc\
boxlist.h\
boxlist.cc\
simtoolbar.h\
simtoolbar.cc\
gspeakersplot.h\
gspeakersplot.cc
gnomespeakers_LDADD = $(G_LIBS)
