CFLAGS = 
CXXFLAGS = -Wall -g
INCLUDES = $(G_CFLAGS)
bin_PROGRAMS = gspeakers
gspeakers_SOURCES = \
main.cc\
gnomespeakers.h\
gnomespeakers.cc\
speakertoolbar.h\
speakertoolbar.cc\
boxtoolbar.h\
boxtoolbar.cc\
boxlist.h\
boxlist.cc\
simtoolbar.h\
simtoolbar.cc\
gspeakersplot.h\
gspeakersplot.cc\
cconfig.h\
cconfig.cc\
gspeakerscfg.h\
gspeakerscfg.cc\
gspeakerscfgbox.h\
gspeakerscfgbox.cc\
gspeakersmenu.h\
gspeakersmenu.cc
gspeakers_LDADD = $(G_LIBS)
