pixmapdir		= $(datadir)/pixmaps
pixmap_DATA		= driver_small.png filter_small.png measure_small.png \
			  speaker_small.png stock_menu_about.png \
			  stock_new_driver_16.png stock_new_driver_24.png \
			  stock_new_driver_xml_16.png stock_new_driver_xml_24.png \
			  stock_new_enclosure_16.png stock_new_enclosure_24.png \
			  stock_new_enclosure_copy_16.png stock_new_enclosure_copy_24.png \
			  stock_new_enclosure_xml_16.png stock_new_enclosure_xml_24.png \
			  stock_new_crossover_16.png \
			  stock_new_crossover_copy_16.png stock_new_crossover_copy_24.png \
		          stock_new_crossover_xml_16.png stock_new_crossover_xml_24.png \
			  stock_plot_crossover_16.png stock_plot_crossover_24.png \
			  save_as_xml_24.png save_as_xml_16.png save_xml_24.png \
			  save_xml_16.png open_xml_24.png open_xml_16.png \
			  delete_driver_16.png delete_driver_24.png \
			  delete_enclosure_16.png delete_enclosure_24.png \
			  delete_crossover_16.png delete_crossover_24.png

EXTRA_DIST		= $(pixmap_DATA)